# artie-user-rs

./: Cargo.toml  Dockerfile  README.md  build.rs
proto/: user.proto
src/: lib.rs  main.rs
src/config/: db.rs  error.rs  mod.rs  pb.rs  tools.rs
src/models/: user_model.rs
src/server/: mod.rs
src/services/: mod.rs  security_service.rs  user_service.rs
tests/: libtest.rs
tests/services/: mod.rs
