[package]
name = "grpc_service"
version = "0.1.0"
edition = "2018"

[dependencies]
tonic = "0.12.1"
tokio = { version = "1", features = ["full"] }
mongodb = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"

[build-dependencies]
tonic-build = "0.12.1"

[package.metadata]
version = "0.1.0"
authors = ["Luis Eduardo Imbernón <imbernon@gmail.com>"]
description = "Un servicio gRPC en Rust que interactúa con MongoDB"
repository = "https://github.com/tu-usuario/grpc_service"
license = "MIT"

[build]
rustflags = ["--cfg", "tokio_unstable"]

[[bin]]
name = "grpc_service"
path = "src/main.rs"
