[package]
name = "user_service"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"

[dependencies]
tonic = "0.12.1"
tonic-reflection = "0.12.1"
tokio = { version = "1", features = ["full"] }
mongodb = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
log = "0.4"
dotenv = "0.15"
env_logger = "0.11.3"
prost = "0.13.1"
bson = "2.11.0"
ring = "0.17.8"
hex = "0.4"

[build-dependencies]
tonic-build = "0.12.1"

[package.metadata]
version = "0.1.0"
authors = ["Luis Eduardo Imbernón <imbernon@gmail.com>"]
description = "ARTIE user gRPC service"
repository = "https://github.com/ARTIEROCKS/artie-user-rs"
license = "MIT"

[build]
rustflags = ["--cfg", "tokio_unstable"]

[[bin]]
name = "user_service"
path = "src/main.rs"

[lib]
name = "user_service"
path = "src/lib.rs"